# Movie_Recommender_Program

./: .gitignore  CMakeLists.txt  README.md  genres.txt  main.cpp  menu.cpp  menu.hpp  movie.cpp  movie.h  movie.hpp  movieList.cpp  movieList.hpp  newdata2.json  recommender.sln  recommender.vcxproj  test.cpp  uniqueGenres.txt  user.cpp  user.hpp
.github/workflows/: main.yml
archive/: Clean.txt  Parse.txt
data/: Database.json  Genres.txt  MovieDatabase.json  newdata.json
json/: adl_serializer.hpp  byte_container_with_subtype.hpp  json_fwd.hpp
json/detail/: macro_scope.hpp  string_concat.hpp
json/detail/iterators/: internal_iterator.hpp  iter_impl.hpp
json/detail/output/: binary_writer.hpp
